[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/first_party/clickable_area_2d/clickable_sprite_collidable.tscn" type="PackedScene" id=1]
[ext_resource path="res://examples/mouse_node_examples/clickable_sprites/test_ui.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite
class_name ClickableSprite
# A sprite with a built-in handler function
# to connect to a ClickableArea2D for click events


signal sprite_clicked()


func _on_clicked():
	emit_signal(\"sprite_clicked\")
	
	
func _on_clickable_area_2d_clicked():
	_on_clicked()
"

[node name="ClickableSprites" type="Node"]

[node name="World" type="Node2D" parent="."]

[node name="red" parent="World" instance=ExtResource( 1 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 219, 307 )
script = SubResource( 1 )

[node name="green" parent="World" instance=ExtResource( 1 )]
modulate = Color( 0, 1, 0.109804, 1 )
position = Vector2( 497, 177 )
script = SubResource( 1 )

[node name="blue" parent="World" instance=ExtResource( 1 )]
modulate = Color( 0, 0.505882, 1, 1 )
position = Vector2( 747, 307 )
script = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI"]
anchor_left = 0.3
anchor_top = 0.7
anchor_right = 0.7
anchor_bottom = 0.9
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
text = "NONE CLICKED"
align = 1
valign = 1

[connection signal="sprite_clicked" from="World/red" to="UI" method="_on_red_sprite_clicked"]
[connection signal="sprite_clicked" from="World/green" to="UI" method="_on_green_sprite_clicked"]
[connection signal="sprite_clicked" from="World/blue" to="UI" method="_on_blue_sprite_clicked"]

[editable path="World/red"]
[editable path="World/green"]
[editable path="World/blue"]
